# enterprise-ai-agent-platform

./: .env.template  .gitignore  conftest.py  create_news_doc.py  environment.lock.yml  environment.yml  main.py  nul  pyproject.toml  pytest.ini  requirements (1).txt  requirements-frozen.txt  requirements.txt  test_mcp_real.py
config/: __init__.py  settings.py
config/module2/: gateway_policy.yaml  sandbox_limit.yaml
config/module3/: bus_policy.yaml
contracts/domains/: hardware_test.json  research_paper.json
delete test/: main_orign.py  module1分3人(3).txt
src/common/: registry.py
src/common/interfaces/: __init__.py  control_plane_api.py  data_plane_api.py  security_plane_api.py  types.py
src/compute_engine/bindings/: CMakeLists.txt  buffer_protocol.hpp  core_bind.cpp
src/compute_engine/ipc_bus/: shm_cleaner.cpp  shm_ring_buffer.cpp  shm_ring_buffer.hpp
src/compute_engine/isolation/: __init__.py  process_killer.py  sandbox_error.py  sandbox_manager.py  warm_preheater.py
src/compute_engine/renderer/: __init__.py  differential_layer.cpp  differential_layer.hpp  epoll_reactor.cpp  epoll_reactor.hpp  exports.cpp  exports.hpp  lexical_healer.cpp  lexical_healer.hpp  msgpack_encoder.hpp  renderer_engine.cpp  renderer_engine.hpp  sliding_buffer.cpp  sliding_buffer.hpp
src/compute_engine/runtime/: api_interceptor.py  circuit_breaker.py  env_validator.py
src/control_plane/: __init__.py  checkpoint.py  graph.py  nodes.py  redlock.py  state.py
src/data_plane/: __init__.py  contract_compiler.py  engine.py  healer.py  llm_router.py  mcp_client_proxy.py  mcp_gateway.py  validators.py  web_mcp_server.py
src/security_guard/: __init__.py  aspect.py  memory.py  path_hash.py  security_guard.md  window.py
tests/: smoke_test_module2.py  test_control_flow.py  test_data_contract.py  test_integration.py  test_security_break.py
tests/data_plane/: test_data_contract.py
tests/module3/: test_bindings_g.py  test_shm_bus.py  test_stream_renderer.py
(+4 files in other folders)
